Revision 0.0.3, released XX-XX-2015
-----------------------------------

- Fix to __doc__ use in setup.py to make -O0 installation mode working.

Revision 0.0.2, released 28-09-2015
-----------------------------------

- Minor fixes towards Python 2.4 compatibility.

Revision 0.0.2rc1, released 14-02-2015
--------------------------------------

- Loadable extention plugin modules infrastructure first introduced.
- Experimental SNMP PDU var-binds logging added.
- Wheel distribution format now supported.

Revision 0.0.2rc0, released 21-01-2015
--------------------------------------

- Multiple fixes supporting Python 2.4-3.4 compatibility.
- Configuration options renamed for better clarity.
- Both source and destination network addresses of SNMP entities
  can now be used for message routing and address spoofing.
- Transparent proxy operation and secondary network interface
  support implemented
- Client-side SNMP timeout/retries now configurable
- Switched to the latest pysnmp API
- snmpEngineId and contextEngineId are always treated as hex in config
- contextEngineId and contextName now configured separately from
  SNMP authentication credentials
- Dead trunk detection implemented
- Switched to Python logging module
- SNMP request PDU type and request OIDs can now be used for request routing
- Fix to SNMPv3 operation on the Client part.

Revision 0.0.1, released 01-04-2014
-----------------------------------

- Initial public release.