@@ -1,6 +1,7 @@
 Revision 0.0.3, released XX-XX-2015
 -----------------------------------
 
+- Unspecified trunk-crypto-key now indicates disabled trunk encryption.
 - Fix to __doc__ use in setup.py to make -O0 installation mode working.
 
 Revision 0.0.2, released 28-09-2015
